<resources>
    <string name="app_name">InventoryApp2</string>
    <string name="item_name">Item Name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier Name</string>
    <string name="supplier_s_name">Supplier\'s Name</string>
    <string name="supplier_pnone_nnumber">Supplier Pnone number</string>
    <string name="supplier_phone_number">Supplier Phone Number</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="new_item">New Item</string>
    <string name="edit_item">Edit Item</string>
    <string name="failed_save">Saving item failed</string>
    <string name="successful_edit">Item was successfuly edited</string>
    <string name="successful_insertion">Item inserted</string>
    <string name="error_update">Error updating item</string>
    <string name="restock_popular_item">Restock popular item</string>
    <string name="delete_all_items">Delete all items</string>
    <string name="product_name">Product Name</string>
    <string name="name">name</string>
    <string name="product_price">Product Price</string>
    <string name="price_small">price</string>
    <string name="press_for_more_details">Press for more details...</string>
    <string name="quantity_small">quantity</string>
    <string name="sell">Sell</string>
    <string name="inventory_is_empty">Inventory is empty</string>
    <string name="enter_items">Enter items</string>
    <string name="delete_item">Delete Item</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="contact_supplier">Contact supplier</string>
    <string name="delete_restock">Quantity is 0, would you like to restock or delete the item?</string>
    <string name="unsaved_changes">Unsaved Changes</string>
    <string name="discard_changes">Discard changes</string>
    <string name="keep_editing">Keep editing</string>
    <string name="do_you_delete">Do you want to delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_failed">Delete item failed</string>
    <string name="delete_successful">Delete item successful</string>
    <string name="quantity_zero_restock">Quantity is 0, would you like to restock this item?</string>
</resources>
